; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_gl1.c_video_texture_load_gl1.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_gl1.c_video_texture_load_gl1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.texture_image = type { i32, i32, i32 }

@RARCH_WRAP_EDGE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.texture_image*, i32, i64*)* @video_texture_load_gl1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @video_texture_load_gl1(%struct.texture_image* %0, i32 %1, i64* %2) #0 {
  %4 = alloca %struct.texture_image*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64*, align 8
  store %struct.texture_image* %0, %struct.texture_image** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64* %2, i64** %6, align 8
  %7 = load i64*, i64** %6, align 8
  %8 = bitcast i64* %7 to i32*
  %9 = call i32 @glGenTextures(i32 1, i32* %8)
  %10 = load i64*, i64** %6, align 8
  %11 = load i64, i64* %10, align 8
  %12 = trunc i64 %11 to i32
  %13 = load i32, i32* @RARCH_WRAP_EDGE, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load %struct.texture_image*, %struct.texture_image** %4, align 8
  %16 = getelementptr inbounds %struct.texture_image, %struct.texture_image* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.texture_image*, %struct.texture_image** %4, align 8
  %19 = getelementptr inbounds %struct.texture_image, %struct.texture_image* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.texture_image*, %struct.texture_image** %4, align 8
  %22 = getelementptr inbounds %struct.texture_image, %struct.texture_image* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @gl1_load_texture_data(i32 %12, i32 %13, i32 %14, i32 4, i32 %17, i32 %20, i32 %23, i32 4)
  ret void
}

declare dso_local i32 @glGenTextures(i32, i32*) #1

declare dso_local i32 @gl1_load_texture_data(i32, i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
